Added datasource for testing.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ quarkus.hibernate-orm.database.default-schema=app
 # Hibernate ORM config
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
+
+# Test profile ? let Quarkus start a container for tests
+%test.quarkus.datasource.devservices.enabled=true
+# IMPORTANT: do not set %test.quarkus.datasource.jdbc.url
