--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app_user
 quarkus.datasource.password=12345
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/test_posgres
-quarkus.hibernate-orm.database.default-schema=app
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/test_posgres?currentSchema=public
 
 # Hibernate ORM config
 quarkus.hibernate-orm.database.generation=update
