--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,21 +35,22 @@ jobs:
           --health-retries=5
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B verify
-      env:
+     - uses: actions/checkout@v4
+     - name: Set up JDK 21
+       uses: actions/setup-java@v4
+       with:
+         java-version: '21'
+         distribution: 'temurin'
+         cache: maven
+     - name: Build with Maven
+       run: mvn -B verify
+       env:
         # Map the ephemeral forwarded port to your Quarkus datasource URL
         QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://localhost:${{ job.services.postgres.ports[5432] }}/test_postgres
         QUARKUS_DATASOURCE_USERNAME: postgres
         QUARKUS_DATASOURCE_PASSWORD: postgres
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+     - name: Update dependency graph
+       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
