--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ quarkus.datasource.username=app_user
 quarkus.datasource.password=12345
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/test_posgres?currentSchema=public
 
+# --- Flyway ---
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway.clean-at-start=false
+quarkus.flyway.baseline-on-migrate=true
+
 # Hibernate ORM config
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
